# FTDRF

./: .gitignore  CITATION.cff  FTDRF  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: MAINTAINER_GUIDE.md  copilot-instructions.md
.github/workflows/: ci.yml
docs/: Juelich_PROPOSAL.md
examples/: README.md  run.py  validation.py
notebooks/: experiment.html  experiment.ipynb  validation.ipynb
scripts/: make_poster.py
src/ftdrf/: __init__.py  simulator.py
tests/: test_property.py  test_simulator.py  test_validation.py
