[metadata]
name = ftdrf
version = 0.1.0
description = Fibonacci Threshold Dyadic Recursive Filter simulation utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src
